Fixed wrapping around links, alight to right articles/project/contact div

--- a/style.css
+++ b/style.css
@@ -17,13 +17,27 @@
         background: var(--main-bg);
         display: flex;
         justify-content: space-between;
-        align-items: center;
+        /* flex-wrap: wrap;*/
+        align-items: left;
+        gap: 0.5rem;
         padding: 12px 16px;
         font-size: 1.2rem;
         font-weight: bold;
         /* border-bottom: 2.5px solid var(--block-line); */
-  
+
     }
+
+    @media (max-width: 600px) {
+        .header>div:first-child {
+            width: 100%;
+            margin-bottom: 1rem;
+        }
+    } 
+
+    /*.header > div {
+    display: flex;
+    flex-direction: column;
+    }*/
 
     .header span {
         font-weight: normal;
@@ -42,7 +56,7 @@
         flex-direction: column;
         border-bottom: 2px solid var(--block-line);
         border-left: 2px solid var(--block-line);
-        border-right: 2px solid var(--block-line);  
+        border-right: 2px solid var(--block-line);
     }
 
     /* Gradient blocks */
@@ -67,6 +81,7 @@
 
     .caption a {
         color: var(--text-light);
+        /* word-break: break-all;*/
         /* same as your text color (#f5f5f5) */
         text-decoration: none;
         /* removes the underline */
@@ -152,26 +167,32 @@
     }
 
     .triangle-list {
-    list-style: none;
-    padding-left: 1.2rem;
-}
+        list-style: none;
+        padding-left: 1.2rem;
+    }
 
-.triangle-list li {
-    position: relative;
-    margin: 0.4rem 0;
-}
+    .triangle-list li {
+        position: relative;
+        margin: 0.4rem 0;
+    }
 
-.triangle-list li::before {
-    content: "►";
-    position: absolute;
-    left: -1.2rem;
-    top: 0.1rem;
-    color: var(--text-light); /* same color as text */
-    font-size: 0.9rem;
-}
+    .triangle-list li::before {
+        content: "►";
+        position: absolute;
+        left: -1.2rem;
+        top: 0.1rem;
+        color: var(--text-light);
+        /* same color as text */
+        font-size: 0.9rem;
+    }
 
-.bib-list p {
-    margin: 0 0 1rem 0;
-    line-height: 1.3;
-}
+    .bib-list p {
+        margin: 0 0 1rem 0;
+        line-height: 1.3;
+    }
 
+    .ellipsis {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: hidden;
+    }
